creamos un productos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
     <h3>Tercer commit</h3>
 
     <h4>Cuarto commit</h4>
+
+    <div>
+        <h4>Producto</h4>
+        <p>Precio</p>
+        <img src="girasol.JPG" alt="girasol">
+    </div>
     
 </body>
 </html>
