--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     <h3>Tercer commit</h3>
 
     <h4>Cuarto commit</h4>
+
+    <footer>
+        <h5>esto es un re footer</h5>
+        <ul>
+            <li>Instagram</li>
+            <li>Facebook</li>
+            <li>Youtube</li>
+            <li>Myspace</li>
+            <li>fotolog</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
